flowcontroller/yamls/networkpolicy-allow-kafka-to-zk.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-to-zk
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: zk
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: kafka
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
    ports:
    - protocol: TCP
      port: 2181
